# dxvk

./: .gitattributes  README.md  build-win64-wine.txt  meson.build  meson_options.txt
lib/: libd3d11.def  libdxgi.def  libdxgi_vk.def
lib32/: libd3d11_vk.def  libdxgi_vk.def
linux/: meson.build
linux/lib/: libd3d11.def  libd3d11_vk.def  libd3dcompiler_47.def  libdxgi.def  libvulkan-1.def
linux/lib64/: libd3d11.def  libd3d11_vk.def  libdxgi.def  libdxgi_vk.def  libvulkan-1.def
src/d3d11/: d3d11_device.cpp  d3d11_include.h  d3d11_main.cpp  d3d11_shader.cpp  d3d11_shader.h  meson.build
src/dxbc/: dxbc_decoder.h  meson.build
src/dxgi/: dxgi.spec  dxgi_include.h  dxgi_main.cpp  dxgi_output.cpp  meson.build
src/dxvk/: dxvk_device.cpp  dxvk_graphics.cpp  dxvk_include.h  dxvk_instance.cpp  meson.build
src/dxvk/hud/: dxvk_hud.cpp  dxvk_hud.h
src/spirv/: meson.build  spirv_code_buffer.cpp  spirv_code_buffer.h  spirv_instruction.h
src/util/: meson.build  util_env.cpp  util_error.h  util_string.h
src/util/com/: com_guid.h  com_include.h
src/util/log/: log.cpp  log.h  log_debug.h
tests/d3d11/: meson.build
tests/dxbc/: meson.build  test_dxbc_compiler.cpp
tests/dxgi/: meson.build
