# -*- mode: meson -*-

option('wine-build', type : 'boolean', value : 'false',
       description : 'build with winebuild wrapper')

option('x86_32', type : 'boolean', value : 'false',
       description : 'build 32 bit libraries')

option('dll-redirects', type : 'boolean', value : 'false',
       description : 'add _vk suffix for dll redirect feature')

option('utils', type : 'boolean', value : 'true',
       description : 'build utils')

option('install-utils', type : 'boolean', value : 'false',
       description : 'install utils')

#option('tests', type : 'boolean', value : 'true',
#       description : 'build test executables')

option('install-tests', type : 'boolean', value : 'false',
       description : 'install test executables')

option('enable_tests', type : 'boolean', value : false)
